@@ -302,7 +302,7 @@
   margin-left: 7px;
 }
 .dispersionArrow {
-  width: 24px;
+  width: 16px;
 }
 .dispersionPanelRow {
   display: flex;
@@ -316,8 +316,8 @@
   color: rgb(168, 168, 168);
   width: 24px;
   height: 21px;
-  margin-top: 10px;
-  margin-left: 14px;
+  margin-top: 6px;
+  margin-left: 12px;
 }
 .dispersionPanel {
   margin-top: 8px;
@@ -333,7 +333,7 @@
   color: rgb(168, 168, 168);
 }
 .dispersionRestButton {
-  margin-left: 83px;
+  margin-left: 38px;
 }
 .histogramToggle {
   position: fixed;
